Graphs modified, SepratorFinder created, hole detection added and tests modified respectively